--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "mongoose": "^6.0.12",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.6.1",
+    "pexels": "^1.3.0",
     "plist": "^3.0.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.22.4",
