--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@redtea/format-axios-error": "^2.0.2",
     "alai": "^1.0.3",
     "aws-sdk": "^2.893.0",
-    "axios": "^0.21.3",
+    "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.6.0",
@@ -109,6 +109,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.22.4",
     "sequelize-typescript": "^1.1.0",
+    "sharp": "^0.29.3",
     "source-map-support": "^0.5.19",
     "xml2js": "^0.4.23"
   }
