--- a/env.yml
+++ b/env.yml
@@ -10,8 +10,11 @@ local:
   IMAGES_BUCKET_NAME_SUBCLIP: "vs-sls-test-gallerys3-subclip"
   IMAGES_BUCKET_NAME: "vs-sls-test-gallerys3"
   USERS_TABLE_NAME: "vs-sls-test-gallery"
+  # SQS_QUEUE: "pexels_sqs_queue"
   SQS_QUEUE: "pexels_sqs_queue"
-  SQS_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/367315594041/sqs_queue"
+
+  SQS_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/367315594041/pexels_sqs_queue"
+  # SQS_QUEUE_URL: "sqs_queue"
 
   TOKEN_KEY:
     "encrypted:AQICAHj9FAkmnqDCG1tAAIGBzls7YTeybtdndvAIaAQC/tAuOwEPhduuT\
@@ -31,8 +34,11 @@ test:
   IMAGES_BUCKET_NAME: "vs-sls-test-gallerys3"
   USERS_TABLE_NAME: "vs-sls-test-gallery"
   IMAGES_BUCKET_NAME_SUBCLIP: "vs-sls-test-gallerys3-subclip"
+  # SQS_QUEUE: "pexels_sqs_queue"
   SQS_QUEUE: "pexels_sqs_queue"
-  SQS_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/367315594041/sqs_queue"
+
+  SQS_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/367315594041/pexels_sqs_queue"
+  # SQS_QUEUE_URL: "sqs_queue"
 
   TOKEN_KEY:
     "encrypted:AQICAHj9FAkmnqDCG1tAAIGBzls7YTeybtdndvAIaAQC/tAuOwEPhduuT\
