--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/jest": "26.0.24",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "14.17.5",
+    "@types/sharp": "^0.29.5",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
