--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "serverless-offline-sqs": "4.1.1",
     "serverless-prune-plugin": "1.5.1",
     "serverless-s3-local": "0.6.18",
+    "serverless-seed": "^0.3.14",
     "serverless-webpack": "5.5.1",
     "sonarqube-scanner": "^2.7.0",
     "sonarqube-verify": "^1.0.2",
